export enum Edge {
  Indentation,
  Extrusion,
  Flat
}
